Update README to simplify JavaFX setup instructions
Removed command line instructions for JavaFX 11+ from README.